VSC transition